# media-server

./: README.md
ai_hub/: README.md  docker-compose.yml  dockerfile  makefile  pyproject.toml
ai_hub/.env/: .env.prod.template
ai_hub/ai_assistent/: composition.py  service.py
ai_hub/ai_assistent/agents/: base.py  factory.py  gemini_agent.py  gemini_sdk.py
ai_hub/ai_assistent/image_generator/: factory.py  gemini_sdk_image_generator.py  image_generator.py  legacy_image_generator.py  utils.py  vertex_client.py
ai_hub/ai_assistent/summarizer/: base.py  gemini_sdk_summarizer.py  summarizer.py
ai_hub/ai_assistent/topics/: animation.py  base.py  chat.py  clarify.py  culture.py  dinner.py  docker_status.py  entertainment.py  gaming.py  logs.py  movies.py  news.py  news_by.py  news_eu.py  news_fun.py  news_pl.py  news_ru.py  news_tr.py  news_ua.py  news_us.py  quakes.py  science.py  technology.py  utils.py  weather.py
ai_hub/ai_assistent/translation/: base.py  gemini_sdk_translator.py  lang_resolver.py  noop.py  translator.py
ai_hub/chat_bot/: __main__.py  handlers.py  messaging.py  rpc_client.py  state.py
ai_hub/chat_bot/handlers/: command_digest.py  command_image.py  command_reset.py  command_set_lang.py  command_start.py  command_translate.py  command_why.py  conversation.py
ai_hub/chat_bot/models/: chat_state.py
ai_hub/configs/: animation.toml  chat.toml  culture.toml  daily.toml  dinner.toml  docker_status.toml  entertainment.toml  gaming.toml  logs.toml  media.toml  news.toml  news_by.toml  news_eu.toml  news_fun.toml  news_pl.toml  news_ru.toml  news_tr.toml  news_ua.toml  news_us.toml  schedule.toml  science.toml  sys.toml  technology.toml
ai_hub/configs/dev/: animation.toml  chat.toml  culture.toml  dinner.toml  docker_status.toml  entertainment.toml  gaming.toml  logs.toml  news.toml  news_by.toml  news_eu.toml  news_pl.toml  news_ru.toml  news_tr.toml  news_ua.toml  news_us.toml  schedule.toml  science.toml  sys.toml  technology.toml
ai_hub/configs/prod/: gaming.toml  media.toml  news_eu.toml  news_ru.toml  science.toml  sys.toml  technology.toml
ai_hub/core/: errors.py  logging.py  serialization.py  settings.py
ai_hub/core/config_models/: __init__.py  _metadata.py  base_digest_config.py  base_message_target_config.py  daily_config.py  dinner_config.py  docker_status_config.py  feed_based_config.py  feed_section_config.py  logs_components.py  logs_config.py  media_config.py  media_recommender_config.py  message_target_config.py  schedule_config.py  schedule_entry_config.py  sys_config.py  sys_patterns_config.py
ai_hub/core/constants/: news.py
ai_hub/functions/channels/: base.py  console_channel.py  factory.py  telegram_channel.py
ai_hub/functions/docker_status/: collector.py
ai_hub/functions/feeds/: feed_collector.py  feed_models.py  feed_utils.py
ai_hub/functions/local_data/: reader.py
ai_hub/functions/logs/: collector.py
ai_hub/functions/media/: collector.py  snapshot.py  titles.py
ai_hub/functions/sys/: collector.py  state.py
ai_hub/mcp/: __main__.py  context.py  dispatcher.py  registration.py  server.py  wiring.py
ai_hub/mcp/dispatcher/: registration.py
ai_hub/mcp/domain/: media_rules.py  media_templates.py  sys_rules.py  sys_templates.py
ai_hub/mcp/logic/: sys_rules.py  sys_templates.py
ai_hub/mcp/routing/: agent_runtime.py  discovery.py  runtime.py
ai_hub/mcp/rpc_methods/: assist.py  daily.py  dinner.py  docker_status.py  logs.py  media.py  news.py  runner.py  sys.py
ai_hub/mcp/runner/: models.py  orchestrator.py  processor.py  sender.py
ai_hub/mcp/services/: earthquake_client.py  geocoding_client.py  weather_client.py
ai_hub/mcp/tools/: base.py  daily_tool.py  dinner.py  (+19 more)
ai_hub/runner/: __main__.py  rpc_client.py
ai_hub/src/: app.py  container.py  main.py  runner.py
ai_hub/tests/: test_media_index.py  test_sys_rules.py  test_topics_weather.py
backup_serviсe/: pyproject.toml
backup_serviсe/src/: configs.py  main.py
earthquake_monitor/: README.md  docker-compose.yml  dockerfile  main.py  makefile  pyproject.toml  sftp-config.json
earthquake_monitor/.env/: .env.prod.template
earthquake_monitor/src/: app.py  config.py  configs.py  earthquake_buzzer_player.py  earthquake_logger.py  earthquake_monitor.py  historical_data_fetcher.py  main.py  melodies.py  monitor.py  scheduler.py  usgs_api.py
earthquake_monitor/tests/: integration_test_alert.py  monitor.tests.py  test_emsc_api.py  test_isc_api.py  test_monitor.py  test_on_demand_earthquake_client.py  test_realtime_monitor_service.py  test_sound_alerter.py  test_usgs_api.py
location_service/: README.md  docker-compose.yml  dockerfile  makefile  pyproject.toml
location_service/.env/: .env.prod.template
location_service/src/: app.py  configs.py  location_controller.py  location_logger.py  main.py
location_service/tests/: test_geocoding_service.py  test_ip_location_service.py  test_on_demand_geocoding_client.py  test_push_location_client.py
metrics_exporter/: README.md  docker-compose.yml  dockerfile  makefile  pyproject.toml
metrics_exporter/.env/: .env.prod.template
metrics_exporter/src/: configs.py  main.py  metrics_exporter.py  metrics_logger.py
peripheral_scripts/bluetooth_policy/: README.md  makefile  pyproject.toml
peripheral_scripts/button_service/: pyproject.toml
peripheral_scripts/common_utils/: pyproject.toml
peripheral_scripts/network_policy/: README.md  makefile  pyproject.toml
peripheral_scripts/oled_service/: pyproject.toml
peripheral_scripts/sound_service/: pyproject.toml
peripheral_scripts/ups_service/: README.md  pyproject.toml
weather_monitor/: README.md  docker-compose.yml  dockerfile  makefile  pyproject.toml
weather_monitor/.env/: .env.dev  .env.prod  .env.prod.template
weather_monitor/src/: app.py  configs.py  main.py  weather_controller.py  weather_logger.py
weather_monitor/tests/: intefration_test_socket_client.py  test_3day_forecast_client.py  test_3day_historical_client.py  test_forecast_client.py  test_historical_client.py  test_on_demand_client.py  test_periodic_service.py  test_push_client.py
(+370 files in other folders)
