[project]
name = "ai-hub"
version = "0.1.0"
requires-python = ">=3.11"

dependencies = [
  "aiofiles>=23.2.1",
  "aiohttp>=3.9.5",
  "APScheduler>=3.10",
  "feedparser>=6.0",
  "google-generativeai>=0.7.2",
  "pydantic>=2.7",
  "pydantic-settings>=2.4",
  "python-telegram-bot>=21.5",
  "rich>=13.7",
]

[tool.ruff]
line-length = 100