[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "backup-service"
version = "0.1.0"
authors = [
  { name="reekroo", email="paul.davidovski@gmail.com" },
]
description = "A service for backing up data to cloud storage."
requires-python = ">=3.9"

dependencies = [
    "schedule==1.2.0",
    "concurrent-log-handler==0.9.28",
    "google-api-python-client==2.52.0",
    "google-auth-httplib2==0.1.0",
    "google-auth-oauthlib==0.5.2",
]

[project.scripts]
backup-service = "src.main:main"

[tool.setuptools.packages.find]
where = ["src"]
