[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "earthquake-monitor"
version = "0.1.0"
authors = [
  { name="reekroo", email="paul.davidovski@gmail.com" },
]
description = "Service for monitoring earthquakes and sending alerts."
requires-python = ">=3.9"

dependencies = [
    "requests==2.32.4",
    "concurrent-log-handler==0.9.28",
    "portalocker==3.2.0",
    "schedule==1.2.1"
]

[project.scripts]
earthquake-monitor = "main:main"

[tool.setuptools.packages.find]
where = ["src"]