[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "location-service"
version = "0.1.0"
authors = [
  { name="reekroo", email="paul.davidovski@gmail.com" },
]
description = "A simple, centralized geolocation data provider service."
requires-python = ">=3.9"

dependencies = [    
    "requests==2.32.4",
    "concurrent-log-handler==0.9.28",
]

[project.scripts]
location-service = "main:main"

[tool.setuptools.packages.find]
where = ["src"]