[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "weather-service"
version = "0.1.0"
authors = [
  { name="reekroo", email="paul.davidovski@gmail.com" },
]
description = "A weather monitoring service with provider fallback and socket output."
requires-python = ">=3.9"

dependencies = [
    "requests==2.32.4",
    "concurrent-log-handler==0.9.28",
]

[project.scripts]
weather-monitor = "main:main"

[tool.setuptools.packages.find]
where = ["src"]