[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "common-utils"
version = "0.1.0"
authors = [
  { name="reekroo", email="paul.davidovski@gmail.com" },
]
description = "Common utils for Raspberry Pi projects."
requires-python = ">=3.9"

dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["utils*"]